--- a/downloads.html
+++ b/downloads.html
@@ -105,8 +105,8 @@
     </div>
 
     <div class="content">
-        <h2>Available Downloads</h2>
-        <p>Here is a mod available for download:</p>
+        <h2>Downloads</h2>
+        <h4>Here are some stuff for download:</h4>
 
         <ul class="download-list">
             <!-- Example Mod -->
